# palisade

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/palisade/: __init__.py  __main__.py  config.py  dbi.py  installer.py  ipc.py
src/palisade/assets/themes/: dark.qss  light.qss
src/palisade/daemon/: daemon.py  enforcer.py  schedule.py
src/palisade/db/: database.py  models.py
src/palisade/gui/: app.py  layout_utils.py  theme.py  window.py
src/palisade/gui/views/: about.py  filter_editor.py  home.py  settings.py
src/palisade/gui/views/filter_editor/: __init__.py  day_picker.py  preset_buttons.py  time_range_row.py  view.py
src/palisade/gui/views/filter_editor/action_section/: __init__.py  cancel_button.py  save_button.py  section.py
src/palisade/gui/views/filter_editor/apps_section/: __init__.py  add_button.py  app_input.py  browse_button.py  section.py
src/palisade/gui/views/filter_editor/schedule_section/: __init__.py  day_picker.py  preset_buttons.py  section.py  time_range_row.py
src/palisade/gui/views/filter_editor/websites_section/: __init__.py  section.py  website_input.py
src/palisade/gui/views/home/: __init__.py  empty_state.py  filter_card.py  filter_card_list.py  view.py
src/palisade/gui/views/settings/: __init__.py  view.py
src/palisade/gui/widgets/: app_picker.py  chip.py  confirm_dialog.py  dev_banner.py  flow_layout.py  primary_button.py  secondary_button.py  section_title.py  sidebar.py
tests/: conftest.py  test_app_picker.py  test_config.py  test_database.py  test_models.py
