[project]
name = "palisade"
version = "0.1.0"
description = "Palisade - a Linux desktop productivity app that blocks websites and apps on a schedule."
readme = "README.md"
authors = [
    { name = "Jacopo Trompeo", email = "jacopo.trompeo@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "psutil>=7.2.2",
    "pyside6>=6.11.1",
    "qtawesome>=1.4.2",
]

[project.scripts]
palisade = "palisade.__main__:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pyright>=1.1.390",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "basic"
